--- a/scripts/show_results_with_RND_sampler.ipynb
+++ b/scripts/show_results_with_RND_sampler.ipynb
@@ -2,8 +2,54 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "id": "43ab1c53",
+   "execution_count": 23,
+   "id": "d6325f95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "# 1階層上のパス（MDN_RND_Foods 直下）を追加\n",
+    "sys.path.append(os.path.abspath(\"..\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "e9861ea6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "現在の作業ディレクトリ: /workspace/work/MDN_RND_Foods/scripts\n",
+      "sys.path の中身:\n",
+      " - /workspace/work/MDN_RND_Foods/scripts\n",
+      " - /usr/lib/python310.zip\n",
+      " - /usr/lib/python3.10\n",
+      " - /usr/lib/python3.10/lib-dynload\n",
+      " - \n",
+      " - /usr/local/lib/python3.10/dist-packages\n",
+      " - /usr/lib/python3/dist-packages\n",
+      " - /workspace/work/MDN_RND_Foods\n",
+      " - /workspace/work/MDN_RND_Foods\n",
+      " - /workspace/work/MDN_RND_Foods\n",
+      " - /workspace/work/MDN_RND_Foods\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"現在の作業ディレクトリ:\", os.getcwd())\n",
+    "print(\"sys.path の中身:\")\n",
+    "for p in sys.path:\n",
+    "    print(\" -\", p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "e2740358",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "id": "d18b75a5",
+   "execution_count": 37,
+   "id": "1c01a827",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,8 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "4f34bda8",
+   "execution_count": 38,
+   "id": "ae4da517",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,24 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "66820a82",
+   "execution_count": 39,
+   "id": "bcc9ae38",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 学習済みモデルのパス\n",
-    "load_path = \"./saved_models/2000epoch_lr0x001_NAdam_100samples_with_RND_sampler\"\n",
+    "load_path = \"../saved_models/2000epoch_lr0x001_NAdam_100samples_with_RND_sampler\"\n",
     "num_gauss = 1\n",
     "\n",
     "# 学習用データ\n",
-    "with open('./datasets/train_data/divide_ids/data_train_100.pickle', mode='br') as fi:\n",
+    "with open('../datasets/train_data/divide_ids/data_train_100.pickle', mode='br') as fi:\n",
     "    id_train = pickle.load(fi)\n",
     "id_train = id_train[0].tolist()\n",
     "#print(len(id_train))\n",
     "#print(id_train)\n",
     "\n",
     "# 評価用データ\n",
-    "with open('./datasets/evaluate_data/sampler_RNDMDN/divide_ids/data_test_100.pickle', mode='br') as fi:\n",
+    "with open('../datasets/evaluate_data/sampler_RNDMDN/divide_ids/data_test_100.pickle', mode='br') as fi:\n",
     "    id_test = pickle.load(fi)\n",
     "id_test = id_test[0].tolist()\n",
     "#print(len(id_test))\n",
@@ -94,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "id": "46221b0e",
+   "execution_count": 40,
+   "id": "d04ba566",
    "metadata": {},
    "outputs": [
     {
@@ -114,9 +160,9 @@
    ],
    "source": [
     "# データセット\n",
-    "train_data = dataset_factory.RGBD_DATASET(root=\"./datasets/train_data\", use_ids = id_train, train=True, img_size=150, crop_size=140)\n",
+    "train_data = dataset_factory.RGBD_DATASET(root=\"../datasets/train_data\", use_ids = id_train, train=True, img_size=150, crop_size=140)\n",
     "print(\"train_data : \", len(train_data))\n",
-    "test_data  = dataset_factory_v1.RGBD_DATASET(root=\"./datasets/evaluate_data/sampler_RNDMDN\", use_ids = id_test, train=False, img_size=150, crop_size=140)\n",
+    "test_data  = dataset_factory_v1.RGBD_DATASET(root=\"../datasets/evaluate_data/sampler_RNDMDN\", use_ids = id_test, train=False, img_size=150, crop_size=140)\n",
     "train_loader = torch.utils.data.DataLoader(train_data,\n",
     "                                           batch_size=8,\n",
     "                                           shuffle=True,\n",
@@ -133,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "a66d87cd",
+   "execution_count": 41,
+   "id": "c31345cf",
    "metadata": {},
    "outputs": [
     {
@@ -228,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "id": "2a609725",
+   "execution_count": 42,
+   "id": "833e54c2",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +313,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a648aee3",
+   "id": "5d7bc8f5",
    "metadata": {},
    "source": [
     "# 学習用データに対する予測結果の評価"
@@ -275,7 +321,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b10eaca4",
+   "id": "471f714b",
    "metadata": {},
    "source": [
     "## ・各データに対するMDNが予測した把持量と標準偏差"
@@ -283,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "id": "2d61f911",
+   "execution_count": 43,
+   "id": "d8d3e6e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bffe590b",
+   "id": "bb91f4c6",
    "metadata": {},
    "source": [
     "## ・各データに対する計測した把持量-予測した把持量を可視化"
@@ -375,8 +421,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "id": "9cb77bbe",
+   "execution_count": 44,
+   "id": "ee0243ec",
    "metadata": {},
    "outputs": [
     {
@@ -449,8 +495,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "id": "6b6093f7",
+   "execution_count": 45,
+   "id": "1fde1a4b",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ed8c14a",
+   "id": "27b28400",
    "metadata": {},
    "source": [
     "## ・ヒストグラムで可視化\n",
@@ -504,8 +550,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "id": "c47ad35b",
+   "execution_count": 46,
+   "id": "57788a0d",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d7f8e45",
+   "id": "a5bc4799",
    "metadata": {},
    "source": [
     "# ✨ テスト用データに対する予測結果の評価"
@@ -550,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b34d2a6b",
+   "id": "6a3d3521",
    "metadata": {},
    "source": [
     "## ・各データに対するMDNが予測した把持量と標準偏差"
@@ -558,8 +604,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
-   "id": "3d677180",
+   "execution_count": 47,
+   "id": "9a559340",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -645,7 +691,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6707c6d4",
+   "id": "18743cfa",
    "metadata": {},
    "source": [
     "## ・各データに対する計測した把持量-モデルの予測把持量（把持成功率）を可視化"
@@ -653,8 +699,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "a5175a2f",
+   "execution_count": 48,
+   "id": "6bb76776",
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +719,7 @@
     }
    ],
    "source": [
-    "path_list = sorted(glob.glob( \"./datasets/evaluate_data/sampler_RNDMDN/color/*\"))\n",
+    "path_list = sorted(glob.glob( \"../datasets/evaluate_data/sampler_RNDMDN/color/*\"))\n",
     "\n",
     "gram_e_list = []\n",
     "gram_j_list = []\n",
@@ -754,8 +800,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "id": "7f31d692",
+   "execution_count": 49,
+   "id": "215c6ae2",
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +895,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21f244b7",
+   "id": "027c66f1",
    "metadata": {},
    "source": [
     "## ・ヒストグラムで可視化\n",
@@ -859,8 +905,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "id": "69023ba0",
+   "execution_count": 50,
+   "id": "21000f33",
    "metadata": {},
    "outputs": [
     {
@@ -894,6 +940,38 @@
     "#plt.savefig(\"train_difference_mass_6000epoch.pdf\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05866dbd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24fc6618",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50c23da2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6bf8e1af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
