--- a/scripts/show_results_with_RND_no_sampler.ipynb
+++ b/scripts/show_results_with_RND_no_sampler.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8cdfd9d6",
+   "id": "70f94d8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0d69921a",
+   "id": "5b720141",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "52849824",
+   "id": "2e41acef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5d9ad8d3",
+   "id": "d8ad96b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "fd5d7acf",
+   "id": "ef0ec87c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "60f7588a",
+   "id": "63682f1d",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bc0e5417",
+   "id": "b3d59427",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "728c5d98",
+   "id": "e40b591f",
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "25bcbdcc",
+   "id": "c1a6c50e",
    "metadata": {},
    "source": [
     "# 学習用データに対する予測結果の評価"
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c43b8ec",
+   "id": "bae8d946",
    "metadata": {},
    "source": [
     "## ・各データに対するMDNが予測した把持量と標準偏差"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a6f7b10b",
+   "id": "232d437d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2140d93c",
+   "id": "2fd47bea",
    "metadata": {},
    "source": [
     "## ・各データに対する計測した把持量-予測した把持量を可視化"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7db0fa7e",
+   "id": "c47ab48c",
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +450,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "e9b88b0e",
+   "id": "c561ad6c",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6809db0",
+   "id": "2a22b638",
    "metadata": {},
    "source": [
     "## ・ヒストグラムで可視化\n",
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9245a1f1",
+   "id": "b035170b",
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a39c1c67",
+   "id": "cdcbaccb",
    "metadata": {},
    "source": [
     "# ✨ テスト用データに対する予測結果の評価"
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f52055f7",
+   "id": "7609b5be",
    "metadata": {},
    "source": [
     "## ・各データに対するMDNが予測した把持量と標準偏差"
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "617c36c2",
+   "id": "0c9937f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0b3d307",
+   "id": "83cdccc4",
    "metadata": {},
    "source": [
     "## 各データに対する計測した把持量-予測した把持量を可視化\n"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "011396ac",
+   "id": "cbb061c6",
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +752,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "794c27c6",
+   "id": "0192362b",
    "metadata": {},
    "outputs": [
     {
@@ -846,7 +846,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2a97f5c",
+   "id": "ffd7b03a",
    "metadata": {},
    "source": [
     "## ・ヒストグラムで可視化\n",
@@ -857,7 +857,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "70664e7c",
+   "id": "505ad4fe",
    "metadata": {},
    "outputs": [
     {
@@ -894,8 +894,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "55cecd6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.22.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "78f19321",
+   "id": "185c9b8d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -903,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3870b802",
+   "id": "b2b7a075",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -911,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a7f1506",
+   "id": "01717d70",
    "metadata": {},
    "outputs": [],
    "source": []
